terraform/lab/gitops/stack/05-traefik-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-talos
spec:
  controller: traefik.io/ingress-controller
