terraform/lab/gitops/stack/18-namespace-observability.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-talos
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
