terraform/lab/gitops/stack/06-traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik-talos
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: traefik-talos
  template:
    metadata:
      labels:
        app: traefik-talos
    spec:
      serviceAccountName: traefik-talos
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: traefik
          image: traefik:v2.11
          args:
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.web.http.redirections.entrypoint.to=websecure
            - --entrypoints.web.http.redirections.entrypoint.scheme=https
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressclass=traefik-talos
            - --providers.kubernetesingress.ingressendpoint.ip=10.4.1.89
            - --certificatesresolvers.cfalcachofa.acme.email=administrator@alcachofa.faith
            - --certificatesresolvers.cfalcachofa.acme.storage=/data/acme.json
            - --certificatesresolvers.cfalcachofa.acme.dnschallenge.provider=cloudflare
            - --certificatesresolvers.cfalcachofa.acme.dnschallenge.resolvers=1.1.1.1:53,1.0.0.1:53
            - --api.insecure=true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: acme-data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: acme-data
          persistentVolumeClaim:
            claimName: traefik-acme
        - name: tmp
          emptyDir: {}
