terraform/lab/gitops/stack/09-whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: apps-talos
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
