terraform/lab/gitops/stack/11-traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik-talos
spec:
  ingressClassName: traefik-talos
  rules:
    - host: dashboard.talos.alcachofa.faith
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
